Fixed some styling issues to make more consistent with car notification

--- a/apps/frontend/src/app/components/dashboard-sections/dashboard-notification-section/dashboard-notification-section.component.html
+++ b/apps/frontend/src/app/components/dashboard-sections/dashboard-notification-section/dashboard-notification-section.component.html
@@ -2,4 +2,5 @@
 <hr />
 <section class="item-container">
   <frontend-car-notification-widget></frontend-car-notification-widget>
+  <frontend-tasks-notification-widget></frontend-tasks-notification-widget>
 </section>
