--- a/apps/frontend/src/app/components/dashboard-widgets/tasks-notification-widget/tasks-notification-widget.component.html
+++ b/apps/frontend/src/app/components/dashboard-widgets/tasks-notification-widget/tasks-notification-widget.component.html
@@ -28,12 +28,12 @@
   </p>
 
   <div class="data-container">
-    <span>Future({{ tasksList.length }})</span>
+    <span>Future<br />({{ tasksList.length }})</span>
     <span class="ready" *ngIf="readyTasksList.length > 0">
-      Ready({{ readyTasksList.length }})
+      Ready <br />({{ readyTasksList.length }})
     </span>
     <span class="overdue" *ngIf="overdueTasksList.length > 0">
-      Overdue({{ overdueTasksList.length }})
+      Overdue<br />({{ overdueTasksList.length }})
     </span>
   </div>
 </div>
