--- a/apps/frontend/src/app/pages/checkout/update-checkout-dialog/update-checkout-dialog.component.html
+++ b/apps/frontend/src/app/pages/checkout/update-checkout-dialog/update-checkout-dialog.component.html
@@ -78,11 +78,17 @@
   <div class="dialog-row">
     <mat-form-field autocomplete="off">
       <mat-label>BB out</mat-label>
-      <mat-select formControlName="bbOut">
+      <!-- <mat-select formControlName="bbOut">
         <mat-option *ngFor="let initials of filteredBbOut | async" [value]="initials">
           {{ initials }}
         </mat-option>
-      </mat-select>
+      </mat-select> -->
+      <input #bbOut matInput formControlName="bbOut" [matAutocomplete]="bbOutOptions" />
+      <mat-autocomplete autoActiveFirstOption #bbOutOptions="matAutocomplete">
+        <mat-option *ngFor="let option of filteredBbOut | async" [value]="option">
+          {{ option }}
+        </mat-option>
+      </mat-autocomplete>
       <mat-error>
         {{ getErrorMessage() }}
       </mat-error>
