add checkin out notification

--- a/apps/frontend/src/app/components/dashboard-sections/dashboard-notification-section/dashboard-notification-section.component.html
+++ b/apps/frontend/src/app/components/dashboard-sections/dashboard-notification-section/dashboard-notification-section.component.html
@@ -3,4 +3,5 @@
 <section class="item-container">
   <frontend-car-notification-widget></frontend-car-notification-widget>
   <frontend-tasks-notification-widget></frontend-tasks-notification-widget>
+  <frontend-checkin-checkout-notification-widget></frontend-checkin-checkout-notification-widget>
 </section>
