--- a/apps/frontend/src/app/components/dashboard-widgets/notification-widgets/tasks-notification-widget/tasks-notification-widget.component.html
+++ b/apps/frontend/src/app/components/dashboard-widgets/notification-widgets/tasks-notification-widget/tasks-notification-widget.component.html
@@ -18,7 +18,7 @@
   </div>
 
   <p style="font-weight: 900">
-    Next Task Time<br />
+    Next Task scheduled<br />
     <span>{{ nextTask | date : 'HH:mm' }}</span>
     <frontend-countdown
       *ngIf="nextTask"
