--- a/apps/frontend/src/app/components/dashboard-widgets/checkin-checkout-notification-widget/checkin-checkout-notification-widget.component.html
+++ b/apps/frontend/src/app/components/dashboard-widgets/checkin-checkout-notification-widget/checkin-checkout-notification-widget.component.html
@@ -1,25 +1,31 @@
 <div
-    class="checkin-widget-container"
-    [ngClass]="{ nonCompleted: nonCompletedCheckinList.length > 0 }"
-  >
-    <div class="header">
-      <h3>Check In / Check out</h3>
-    </div>
-
-    <p style="font-weight: 900">
-      Time til 21.00:
-
-      <frontend-countdown [nextTime]="timeTil21" [displayTimeLeftText]="false" [displayAlways]="true"></frontend-countdown>
-    </p>
-
-    <div class="data-container">
-      <span [ngClass]="{ nonCompleted: nonCompletedCheckoutList.length > 0 }"
-        routerLink="/checkin"
-        >Checkins <br />({{ nonCompletedCheckinList.length }})</span
-      >
-      <span [ngClass]="{ nonCompleted: nonCompletedCheckoutList.length > 0 }"
-        routerLink="/checkout"
-        >Checkouts <br />({{ nonCompletedCheckoutList.length }})</span
-      >
-    </div>
+  class="widget-container"
+  [ngClass]="{
+    'non-completed':
+      nonCompletedCheckinList.length + nonCompletedCheckoutList.length > 0 && timeIsPassed21
+  }"
+>
+  <div class="header">
+    <h3>Check In / Check out</h3>
+    <img
+      *ngIf="nonCompletedCheckinList.length + nonCompletedCheckoutList.length > 0 && timeIsPassed21"
+      src="assets/icons/alerts/warning-alert-icon.svg"
+      alt="alert icon"
+    />
   </div>
+
+  <p style="font-weight: 900">
+    Time til 21.00 <br/> 21:00| Time til:
+
+    <frontend-countdown
+      [nextTime]="timeTil21"
+      [displayTimeLeftText]="false"
+      [displayAlways]="true"
+    ></frontend-countdown>
+  </p>
+
+  <div class="data-container">
+    <span routerLink="/checkin" *ngIf="nonCompletedCheckinList.length > 0">Check In <br />({{ nonCompletedCheckinList.length }})</span>
+    <span routerLink="/checkout" *ngIf="nonCompletedCheckoutList.length > 0">Check Out <br />({{ nonCompletedCheckoutList.length }})</span>
+  </div>
+</div>
