feat: 🎸 update word

--- a/apps/frontend/src/app/pages/tasks/edit-task-dialog/edit-task-dialog.component.html
+++ b/apps/frontend/src/app/pages/tasks/edit-task-dialog/edit-task-dialog.component.html
@@ -35,7 +35,7 @@
       (click)="reset()"
       *ngIf="this.data.completedAt || this.data.initials"
     >
-      reset
+      Reset
     </button>
 
     <button mat-raised-button class="secondary-btn" type="button" mat-dialog-close>Cancel</button>
