add file export to checkin

--- a/apps/frontend/src/app/pages/checkin/checkin.component.html
+++ b/apps/frontend/src/app/pages/checkin/checkin.component.html
@@ -31,6 +31,7 @@
       <button mat-raised-button class="action-btn" (click)="openCreateDialog()">
         Add Check In
       </button>
+      <button class="action-btn" (click)="openCsvExportDialog()" mat-raised-button>Export</button>
     </div>
   </div>
   <hr />
