--- a/apps/frontend/src/app/pages/checkout/checkout.component.html
+++ b/apps/frontend/src/app/pages/checkout/checkout.component.html
@@ -30,6 +30,7 @@
       <button mat-raised-button class="action-btn" (click)="openCreateDialog()">
         Add Check Out
       </button>
+      <button class="action-btn" (click)="openCsvExportDialog()" mat-raised-button>Export</button>
     </div>
   </div>
   <hr />
