add data export to cars

--- a/apps/frontend/src/app/pages/cars/cars.component.html
+++ b/apps/frontend/src/app/pages/cars/cars.component.html
@@ -30,6 +30,7 @@
         {{ showAll ? 'Show Current' : 'Show All' }}
       </button>
       <button class="action-btn" (click)="openCreateDialog()" mat-raised-button>Add Car</button>
+      <button class="action-btn" (click)="openCsvExportDialog()" mat-raised-button>Export</button>
     </div>
   </div>
   <hr />
