add final files

--- a/apps/frontend/src/app/pages/assignments/assignments.component.html
+++ b/apps/frontend/src/app/pages/assignments/assignments.component.html
@@ -5,6 +5,7 @@
       <button mat-raised-button class="action-btn" (click)="openCreateDialog()">
         Add assignment
       </button>
+      <button class="action-btn" (click)="openCsvExportDialog()" mat-raised-button>Export</button>
     </div>
   </div>
   <hr />
