--- a/apps/frontend/src/app/pages/longterm/longterm.component.html
+++ b/apps/frontend/src/app/pages/longterm/longterm.component.html
@@ -39,6 +39,7 @@
       >
         Add long term
       </button>
+      <button class="action-btn" (click)="openCsvExportDialog()" mat-raised-button>Export</button>
     </div>
   </div>
   <hr />
