feat: 🎸 reafactor and fix styling

--- a/apps/frontend/src/app/components/dashboard-widgets/notification-widgets/checkin-checkout-notification-widget/checkin-checkout-notification-widget.component.html
+++ b/apps/frontend/src/app/components/dashboard-widgets/notification-widgets/checkin-checkout-notification-widget/checkin-checkout-notification-widget.component.html
@@ -14,9 +14,8 @@
     />
   </div>
 
-  <p style="font-weight: 900">
-    Time til 21.00 <br />
-    21:00| Time til:
+  <p>
+    21:00 | Time til | 
 
     <frontend-countdown
       [nextTime]="timeTil21"
