--- a/apps/frontend/src/app/components/dashboard-widgets/notification-widgets/checkin-checkout-notification-widget/checkin-checkout-notification-widget.component.html
+++ b/apps/frontend/src/app/components/dashboard-widgets/notification-widgets/checkin-checkout-notification-widget/checkin-checkout-notification-widget.component.html
@@ -1,10 +1,4 @@
-<div
-  class="widget-container"
-  [ngClass]="{
-    'non-completed':
-      nonCompletedCheckinList.length + nonCompletedCheckoutList.length > 0 && timeIsPassed21
-  }"
->
+<div class="notification-widget-container" [ngClass]="{ ready: timeIsPassed21 }">
   <div class="header">
     <h3>Check In / Check out</h3>
     <img
@@ -15,7 +9,7 @@
   </div>
 
   <p>
-    21:00 | Time til | 
+    21:00 | Time til |
 
     <frontend-countdown
       [nextTime]="timeTil21"
@@ -25,10 +19,16 @@
   </p>
 
   <div class="data-container">
-    <span routerLink="/checkin" *ngIf="nonCompletedCheckinList.length > 0"
+    <span
+      routerLink="/checkin"
+      [ngClass]="{ ready: timeIsPassed21 }"
+      *ngIf="nonCompletedCheckinList.length > 0"
       >Check In <br />({{ nonCompletedCheckinList.length }})</span
     >
-    <span routerLink="/checkout" *ngIf="nonCompletedCheckoutList.length > 0"
+    <span
+      routerLink="/checkout"
+      [ngClass]="{ ready: timeIsPassed21 }"
+      *ngIf="nonCompletedCheckoutList.length > 0"
       >Check Out <br />({{ nonCompletedCheckoutList.length }})</span
     >
   </div>
