--- a/apps/frontend/src/assets/styles/notification-widget.scss
+++ b/apps/frontend/src/assets/styles/notification-widget.scss
@@ -1,4 +1,4 @@
-.car-widget-container {
+.notification-widget-container {
   border: var(--border);
   border-radius: 5px;
   padding: 10px 15px 15px 15px;
