--- a/apps/frontend/src/app/pages/announcements/announcements.component.html
+++ b/apps/frontend/src/app/pages/announcements/announcements.component.html
@@ -63,7 +63,7 @@
       </ng-container>
 
       <ng-container matColumnDef="files">
-        <th mat-header-cell *matHeaderCellDef>Images</th>
+        <th mat-header-cell *matHeaderCellDef>View</th>
         <td mat-cell *matCellDef="let item" class="small-field">
           <button
             mat-raised-button
