--- a/apps/frontend/src/assets/styles/notification-widget.scss
+++ b/apps/frontend/src/assets/styles/notification-widget.scss
@@ -17,7 +17,7 @@
     h3 {
       width: 100%;
       font-size: 1.5em;
-    }    
+    }
 
     img {
       position: relative;
@@ -50,7 +50,7 @@
       border-radius: 5px;
       box-shadow: 0px 0px 8px -3px rgb(0 0 0 / 10%);
       cursor: pointer;
-      transition: .5s ease-out;
+      transition: 0.5s ease-out;
 
       &:hover {
         transform: scale(1.05);
