--- a/apps/frontend/src/styles.css
+++ b/apps/frontend/src/styles.css
@@ -11,6 +11,8 @@
   /* Colors */
   --extra-light-grey: #f1f1f1;
   --danger-red: #f34d4d;
+  --light-red: #fccdcd;
+  --lighter-red: #ffdbdb;
 
   --main-blue: #2f2fa2;
   --main-blue-low-opacity: rgba(47, 47, 162, 0.4);
@@ -25,6 +27,8 @@
   --grey: rgba(0, 0, 0, 0.2);
   --lightblue: #ebebf6;
   --light-yellow: #fff971;
+  --lighter-yellow: #fffa95;
+  --extra-light-yellow: #fffdd1;
   --yellow: #fdf53a;
   --dark-yellow: #b3ab00;
 }
