--- a/apps/frontend/src/app/pages/checkout/checkout.component.html
+++ b/apps/frontend/src/app/pages/checkout/checkout.component.html
@@ -30,7 +30,9 @@
       <button mat-raised-button class="action-btn" (click)="openCreateDialog()">
         Add Check Out
       </button>
-      <button class="action-btn" (click)="openCsvExportDialog()" mat-raised-button>Export</button>
+      <button class="secondary-btn" (click)="openCsvExportDialog()" mat-raised-button>
+        <img src="assets/icons/export-icon.svg" alt="export icon" class="export-icon" />
+      </button>
     </div>
   </div>
   <hr />
