--- a/apps/frontend/src/app/pages/longterm/longterm.component.html
+++ b/apps/frontend/src/app/pages/longterm/longterm.component.html
@@ -39,7 +39,9 @@
       >
         Add Long Term
       </button>
-      <button class="action-btn" (click)="openCsvExportDialog()" mat-raised-button>Export</button>
+      <button class="secondary-btn" (click)="openCsvExportDialog()" mat-raised-button>
+        <img src="assets/icons/export-icon.svg" alt="export icon" class="export-icon" />
+      </button>
     </div>
   </div>
   <hr />
