--- a/apps/frontend/src/app/pages/cars/cars.component.html
+++ b/apps/frontend/src/app/pages/cars/cars.component.html
@@ -30,7 +30,9 @@
         {{ showAll ? 'Show Current' : 'Show All' }}
       </button>
       <button class="action-btn" (click)="openCreateDialog()" mat-raised-button>Add Car</button>
-      <button class="action-btn" (click)="openCsvExportDialog()" mat-raised-button>Export</button>
+      <button class="secondary-btn" (click)="openCsvExportDialog()" mat-raised-button>
+        <img src="assets/icons/export-icon.svg" alt="export icon" class="export-icon" />
+      </button>
     </div>
   </div>
   <hr />
