--- a/apps/frontend/src/styles.css
+++ b/apps/frontend/src/styles.css
@@ -82,6 +82,10 @@ button {
   bottom: 2px;
 }
 
+.export-icon {
+  height: 20px;
+}
+
 .basic-btn {
   color: var(--main-blue);
   background-color: white;
