--- a/apps/frontend/src/app/pages/assignments/assignments.component.html
+++ b/apps/frontend/src/app/pages/assignments/assignments.component.html
@@ -10,7 +10,7 @@
   <hr />
 
   <div class="table-height">
-    <table mat-table [dataSource]="assignmentList" *ngIf="!isLoading">
+    <table mat-table [dataSource]="incompleteAssignments" *ngIf="!isLoading">
       <ng-container matColumnDef="room">
         <th mat-header-cell *matHeaderCellDef>Room nr.</th>
         <td mat-cell *matCellDef="let item">
@@ -61,6 +61,59 @@
       ></tr>
     </table>
 
+    <hr />
+    <div class="table-height">
+      <table mat-table [dataSource]="completeAssignments" *ngIf="!isLoading">
+        <ng-container matColumnDef="room">
+          <th mat-header-cell *matHeaderCellDef>Room nr.</th>
+          <td mat-cell *matCellDef="let item">
+            {{ item.room }}
+          </td>
+        </ng-container>
+        <ng-container matColumnDef="task">
+          <th mat-header-cell *matHeaderCellDef>Task</th>
+          <td mat-cell *matCellDef="let item">
+            {{ item.task }}
+          </td>
+        </ng-container>
+        <ng-container matColumnDef="comments">
+          <th mat-header-cell *matHeaderCellDef>Comments</th>
+          <td mat-cell *matCellDef="let item" class="comments-field">
+            {{ item.comments }}
+          </td>
+        </ng-container>
+        <ng-container matColumnDef="requestedBy">
+          <th mat-header-cell *matHeaderCellDef>Requested by</th>
+          <td mat-cell *matCellDef="let item">{{ item.requestedBy }}</td>
+        </ng-container>
+        <ng-container matColumnDef="requestedAt">
+          <th mat-header-cell *matHeaderCellDef>Requested at</th>
+          <td mat-cell *matCellDef="let item">
+            {{ item.requestedAt | date : 'dd/MM HH:mm' }}
+          </td>
+        </ng-container>
+        <ng-container matColumnDef="performedBy">
+          <th mat-header-cell *matHeaderCellDef>Performed by</th>
+          <td mat-cell *matCellDef="let item">
+            {{ item.performedBy }}
+          </td>
+        </ng-container>
+        <ng-container matColumnDef="completedAt">
+          <th mat-header-cell *matHeaderCellDef>Performed at</th>
+          <td mat-cell *matCellDef="let item">
+            {{ item.completedAt ? (item.completedAt | date : 'dd/MM HH:mm') : '' }}
+          </td>
+        </ng-container>
+
+        <tr mat-header-row *matHeaderRowDef="assignmentColumns"></tr>
+        <tr
+          mat-row
+          [ngClass]="row.completedAt ? 'completed' : ''"
+          *matRowDef="let row; columns: assignmentColumns"
+          (click)="openEditDialog(row)"
+        ></tr>
+      </table>
+    </div>
     <div class="table-spinner-full-size" *ngIf="isLoading">
       <mat-icon><mat-spinner diameter="21"></mat-spinner></mat-icon>
     </div>
