--- a/apps/frontend/src/app/pages/cars/cars.component.html
+++ b/apps/frontend/src/app/pages/cars/cars.component.html
@@ -173,45 +173,45 @@
         *matRowDef="let row; columns: carColumns"
       ></tr>
     </table>
-    <hr/>
 
     <div class="table-height">
-      <table mat-table [dataSource]="completedCarList" *ngIf="!isLoading">
+      <hr *ngIf="showAll" />
+      <table mat-table [dataSource]="completedCarList" *ngIf="!isLoading && showAll">
         <ng-container matColumnDef="room">
           <th mat-header-cell *matHeaderCellDef>Room nr.</th>
           <td mat-cell *matCellDef="let item" (click)="openEditDialog(item)">
             {{ item.room }}
           </td>
         </ng-container>
-  
+
         <ng-container matColumnDef="tagNr">
           <th mat-header-cell *matHeaderCellDef>Tag nr.</th>
           <td mat-cell *matCellDef="let item" (click)="openEditDialog(item)">
             {{ item.tagNr }}
           </td>
         </ng-container>
-  
+
         <ng-container matColumnDef="arrivalDate">
           <th mat-header-cell *matHeaderCellDef>Arr.</th>
           <td mat-cell *matCellDef="let item" (click)="openEditDialog(item)">
             {{ item.arrivalDate ? (item.arrivalDate | date : 'dd/MM') : '' }}
           </td>
         </ng-container>
-  
+
         <ng-container matColumnDef="departureDate">
           <th mat-header-cell *matHeaderCellDef>Dep.</th>
           <td mat-cell *matCellDef="let item" (click)="openEditDialog(item)">
             {{ item.departureDate ? (item.departureDate | date : 'dd/MM') : '' }}
           </td>
         </ng-container>
-  
+
         <ng-container matColumnDef="name">
           <th mat-header-cell *matHeaderCellDef>Name</th>
           <td mat-cell *matCellDef="let item" (click)="openEditDialog(item)">
             {{ item.name }}
           </td>
         </ng-container>
-  
+
         <ng-container matColumnDef="licensePlate">
           <th mat-header-cell *matHeaderCellDef>License plate</th>
           <td mat-cell *matCellDef="let item" (click)="viewFiles(item)">
@@ -224,75 +224,75 @@
                 />
                 ({{ item.files.length }})
               </span>
-  
+
               <span>{{ item.licensePlate }}</span>
             </div>
           </td>
         </ng-container>
-  
+
         <ng-container matColumnDef="expirationDateTime">
           <th mat-header-cell *matHeaderCellDef>Park<br />exp.</th>
           <td mat-cell *matCellDef="let item" (click)="openEditDialog(item)">
             {{ item.expirationDate ? (item.expirationDate | date : 'dd/MM HH:mm') : '' }}
           </td>
         </ng-container>
-  
+
         <ng-container matColumnDef="pickUpDateTime">
           <th mat-header-cell *matHeaderCellDef>Pick<br />up time</th>
           <td mat-cell *matCellDef="let item" (click)="openEditDialog(item)">
             {{ item.pickUpTime ? (item.pickUpTime | date : 'dd/MM HH:mm') : 'Call down' }}
           </td>
         </ng-container>
-  
+
         <ng-container matColumnDef="bbDown">
           <th mat-header-cell *matHeaderCellDef>BB down</th>
           <td mat-cell *matCellDef="let item" (click)="openEditDialog(item)">
             {{ item.bbDown }}
           </td>
         </ng-container>
-  
+
         <ng-container matColumnDef="bbUp">
           <th mat-header-cell *matHeaderCellDef>BB up</th>
           <td mat-cell *matCellDef="let item" (click)="openEditDialog(item)">
             {{ item.bbUp }}
           </td>
         </ng-container>
-  
+
         <ng-container matColumnDef="location">
           <th mat-header-cell *matHeaderCellDef>Location</th>
           <td mat-cell *matCellDef="let item" (click)="openEditDialog(item)">
             {{ item.location }}
           </td>
         </ng-container>
-  
+
         <ng-container matColumnDef="parkingLot">
           <th mat-header-cell *matHeaderCellDef>Lot</th>
           <td mat-cell *matCellDef="let item" (click)="openEditDialog(item)">
             {{ item.parkingLot }}
           </td>
         </ng-container>
-  
+
         <ng-container matColumnDef="deliveryDateTime">
           <th mat-header-cell *matHeaderCellDef>Delivery<br />time</th>
           <td mat-cell *matCellDef="let item" (click)="openEditDialog(item)">
             {{ item.deliveryTime ? (item.deliveryTime | date : 'dd/MM HH:mm') : '' }}
           </td>
         </ng-container>
-  
+
         <ng-container matColumnDef="bbOut">
           <th mat-header-cell *matHeaderCellDef>BB out</th>
           <td mat-cell *matCellDef="let item" (click)="openEditDialog(item)">
             {{ item.bbOut }}
           </td>
         </ng-container>
-  
+
         <ng-container matColumnDef="comments">
           <th mat-header-cell *matHeaderCellDef>Comments</th>
           <td mat-cell *matCellDef="let item" (click)="openEditDialog(item)" class="comments-field">
             {{ item.comments }}
           </td>
         </ng-container>
-  
+
         <ng-container matColumnDef="charged">
           <th mat-header-cell *matHeaderCellDef>Charged</th>
           <td mat-cell *matCellDef="let item">
@@ -306,7 +306,7 @@
             </label>
           </td>
         </ng-container>
-  
+
         <tr mat-header-row *matHeaderRowDef="carColumns"></tr>
         <tr
           mat-row
