feat: 🎸 Fixing touches

--- a/apps/frontend/src/assets/styles/table.scss
+++ b/apps/frontend/src/assets/styles/table.scss
@@ -3,6 +3,11 @@ table {
   box-shadow: none;
 }
 
+.no-items-text {
+  text-align: center;
+  margin-top: 1em;
+}
+
 .comments-field {
   padding: 10px !important;
   text-align: left !important;
