--- a/apps/frontend/src/app/pages/checkin/checkin.component.html
+++ b/apps/frontend/src/app/pages/checkin/checkin.component.html
@@ -114,88 +114,106 @@
     ></tr>
   </table>
 
-  <h3 class="completed-heading">Completed items</h3>
-  <hr class="completed-hr" />
-  <table mat-table [dataSource]="completeCheckins" *ngIf="!isLoading">
-    <ng-container matColumnDef="room">
-      <th mat-header-cell *matHeaderCellDef>Room nr.</th>
-      <td mat-cell *matCellDef="let item" (click)="openEditDialog(item)">
-        {{ item.room }}
-      </td>
-    </ng-container>
-    <ng-container matColumnDef="name">
-      <th mat-header-cell *matHeaderCellDef>Name</th>
-      <td mat-cell *matCellDef="let item" (click)="openEditDialog(item)">
-        {{ item.name }}
-      </td>
-    </ng-container>
-    <ng-container matColumnDef="arrivalTime">
-      <th mat-header-cell *matHeaderCellDef>Time of<br />arrival</th>
-      <td mat-cell *matCellDef="let item" (click)="openEditDialog(item)">
-        {{ item.arrivalTime ? (item.arrivalTime | date : 'HH:mm') : '' }}
-      </td>
-    </ng-container>
-    <ng-container matColumnDef="bags">
-      <th mat-header-cell *matHeaderCellDef>Nr. of<br />bags</th>
-      <td mat-cell *matCellDef="let item" (click)="viewFiles(item)">
-        <div [ngClass]="item.files.length > 0 ? 'view-files-wrapper' : ''">
-          <span *ngIf="item.files.length > 0" class="file-number">
-            <img class="image-icon" src="assets/icons/view-files-icon.svg" alt="View files icon" />
-            ({{ item.files.length }})
-          </span>
-          <span> {{ item.bags }} </span>
-        </div>
-      </td>
-    </ng-container>
-    <ng-container matColumnDef="tagNr">
-      <th mat-header-cell *matHeaderCellDef>Tag nr.</th>
-      <td mat-cell *matCellDef="let item" (click)="openEditDialog(item)">
-        {{ item.tagNr }}
-      </td>
-    </ng-container>
-    <ng-container matColumnDef="bbLr">
-      <th mat-header-cell *matHeaderCellDef>BB in LR</th>
-      <td mat-cell *matCellDef="let item" (click)="openEditDialog(item)">
-        {{ item.bbLr }}
-      </td>
-    </ng-container>
-    <ng-container matColumnDef="location">
-      <th mat-header-cell *matHeaderCellDef>Location</th>
-      <td mat-cell *matCellDef="let item" (click)="openEditDialog(item)">
-        {{ item.location }}
-      </td>
-    </ng-container>
-    <ng-container matColumnDef="completedAt">
-      <th mat-header-cell *matHeaderCellDef>
-        Time in<br />
-        room
-      </th>
-      <td mat-cell *matCellDef="let item" (click)="openEditDialog(item)">
-        {{ item.completedAt ? (item.completedAt | date : 'HH:mm') : '' }}
-      </td>
-    </ng-container>
-    <ng-container matColumnDef="bbOut">
-      <th mat-header-cell *matHeaderCellDef>BB up</th>
-      <td mat-cell *matCellDef="let item" (click)="openEditDialog(item)">
-        {{ item.bbOut }}
-      </td>
-    </ng-container>
-    <ng-container matColumnDef="comments">
-      <th mat-header-cell *matHeaderCellDef>Comments</th>
-      <td mat-cell *matCellDef="let item" (click)="openEditDialog(item)" class="comments-field">
-        {{ item.comments }}
-      </td>
-    </ng-container>
+  <h3 *ngIf="incompleteCheckins.length === 0" class="no-items-text">No items</h3>
 
-    <tr mat-header-row *matHeaderRowDef="checkinColumns"></tr>
-    <tr
-      mat-row
-      [ngClass]="row.completedAt ? 'completed' : ''"
-      *matRowDef="let row; columns: checkinColumns"
-    ></tr>
-  </table>
+  <div *ngIf="completeCheckins.length > 0">
+    <h3 class="completed-heading">Completed items</h3>
+    <hr class="completed-hr" />
 
-  <div class="table-spinner-full-size" *ngIf="isLoading">
-    <mat-icon><mat-spinner diameter="21"></mat-spinner></mat-icon>
+    <table mat-table [dataSource]="completeCheckins" *ngIf="!isLoading">
+      <ng-container matColumnDef="room">
+        <th mat-header-cell *matHeaderCellDef>Room nr.</th>
+        <td mat-cell *matCellDef="let item" (click)="openEditDialog(item)">
+          {{ item.room }}
+        </td>
+      </ng-container>
+
+      <ng-container matColumnDef="name">
+        <th mat-header-cell *matHeaderCellDef>Name</th>
+        <td mat-cell *matCellDef="let item" (click)="openEditDialog(item)">
+          {{ item.name }}
+        </td>
+      </ng-container>
+
+      <ng-container matColumnDef="arrivalTime">
+        <th mat-header-cell *matHeaderCellDef>Time of<br />arrival</th>
+        <td mat-cell *matCellDef="let item" (click)="openEditDialog(item)">
+          {{ item.arrivalTime ? (item.arrivalTime | date : 'HH:mm') : '' }}
+        </td>
+      </ng-container>
+
+      <ng-container matColumnDef="bags">
+        <th mat-header-cell *matHeaderCellDef>Nr. of<br />bags</th>
+        <td mat-cell *matCellDef="let item" (click)="viewFiles(item)">
+          <div [ngClass]="item.files.length > 0 ? 'view-files-wrapper' : ''">
+            <span *ngIf="item.files.length > 0" class="file-number">
+              <img
+                class="image-icon"
+                src="assets/icons/view-files-icon.svg"
+                alt="View files icon"
+              />
+              ({{ item.files.length }})
+            </span>
+            <span> {{ item.bags }} </span>
+          </div>
+        </td>
+      </ng-container>
+
+      <ng-container matColumnDef="tagNr">
+        <th mat-header-cell *matHeaderCellDef>Tag nr.</th>
+        <td mat-cell *matCellDef="let item" (click)="openEditDialog(item)">
+          {{ item.tagNr }}
+        </td>
+      </ng-container>
+
+      <ng-container matColumnDef="bbLr">
+        <th mat-header-cell *matHeaderCellDef>BB in LR</th>
+        <td mat-cell *matCellDef="let item" (click)="openEditDialog(item)">
+          {{ item.bbLr }}
+        </td>
+      </ng-container>
+
+      <ng-container matColumnDef="location">
+        <th mat-header-cell *matHeaderCellDef>Location</th>
+        <td mat-cell *matCellDef="let item" (click)="openEditDialog(item)">
+          {{ item.location }}
+        </td>
+      </ng-container>
+
+      <ng-container matColumnDef="completedAt">
+        <th mat-header-cell *matHeaderCellDef>
+          Time in<br />
+          room
+        </th>
+        <td mat-cell *matCellDef="let item" (click)="openEditDialog(item)">
+          {{ item.completedAt ? (item.completedAt | date : 'HH:mm') : '' }}
+        </td>
+      </ng-container>
+
+      <ng-container matColumnDef="bbOut">
+        <th mat-header-cell *matHeaderCellDef>BB up</th>
+        <td mat-cell *matCellDef="let item" (click)="openEditDialog(item)">
+          {{ item.bbOut }}
+        </td>
+      </ng-container>
+
+      <ng-container matColumnDef="comments">
+        <th mat-header-cell *matHeaderCellDef>Comments</th>
+        <td mat-cell *matCellDef="let item" (click)="openEditDialog(item)" class="comments-field">
+          {{ item.comments }}
+        </td>
+      </ng-container>
+
+      <tr mat-header-row *matHeaderRowDef="checkinColumns"></tr>
+      <tr
+        mat-row
+        [ngClass]="row.completedAt ? 'completed' : ''"
+        *matRowDef="let row; columns: checkinColumns"
+      ></tr>
+    </table>
+
+    <div class="table-spinner-full-size" *ngIf="isLoading">
+      <mat-icon><mat-spinner diameter="21"></mat-spinner></mat-icon>
+    </div>
   </div>
 </main>
