Added Bike List Alerts

--- a/apps/frontend/src/app/components/csv-export/csv-export.component.html
+++ b/apps/frontend/src/app/components/csv-export/csv-export.component.html
@@ -9,22 +9,12 @@
   <div class="dialog-row">
     <mat-form-field class="remove-error-message">
       <mat-label>From</mat-label>
-      <input
-        onclick="this.showPicker()"
-        matInput
-        type="date"
-        formControlName="fromTime"
-      />
+      <input onclick="this.showPicker()" matInput type="date" formControlName="fromTime" />
     </mat-form-field>
 
     <mat-form-field class="remove-error-message">
       <mat-label>Until</mat-label>
-      <input
-        onclick="this.showPicker()"
-        matInput
-        type="date"
-        formControlName="untilTime"
-      />
+      <input onclick="this.showPicker()" matInput type="date" formControlName="untilTime" />
     </mat-form-field>
   </div>
 
