--- a/apps/frontend/src/app/components/dashboard-sections/dashboard-notification-section/dashboard-notification-section.component.html
+++ b/apps/frontend/src/app/components/dashboard-sections/dashboard-notification-section/dashboard-notification-section.component.html
@@ -4,4 +4,5 @@
   <frontend-car-notification-widget></frontend-car-notification-widget>
   <frontend-tasks-notification-widget></frontend-tasks-notification-widget>
   <frontend-checkin-checkout-notification-widget></frontend-checkin-checkout-notification-widget>
+  <frontend-bike-notification-widget></frontend-bike-notification-widget>
 </section>
