Split daily tasks page into tabs

--- a/apps/frontend/src/app/pages/tasks/tasks.component.scss
+++ b/apps/frontend/src/app/pages/tasks/tasks.component.scss
@@ -4,3 +4,10 @@
   right: 9px;
   width: 0;
 }
+
+::ng-deep {
+  .mat-tab-label-content {
+    font-weight: bold;
+    color: var(--main-blue);
+  }
+}
