--- a/apps/frontend/src/app/pages/tasks/tasks.component.html
+++ b/apps/frontend/src/app/pages/tasks/tasks.component.html
@@ -1,139 +1,137 @@
 <!-- Morning section -->
 <main>
   <div class="table-actions">
-    <h1>Morning</h1>
-
     <button mat-raised-button class="basic-btn" (click)="openTableInfo()">Table Info</button>
   </div>
   <hr />
+  <mat-tab-group [selectedIndex]="defaultTabIndex">
+    <mat-tab label="Morning" class="tab-header">
+      <table mat-table [dataSource]="morningTasks" *ngIf="isLoading">
+        <ng-container matColumnDef="time">
+          <th mat-header-cell *matHeaderCellDef>Time</th>
+          <td mat-cell *matCellDef="let item" class="small-field">
+            {{ item.time }}
+          </td>
+        </ng-container>
+        <ng-container matColumnDef="task">
+          <th mat-header-cell *matHeaderCellDef>Task</th>
+          <td class="comments-field" mat-cell *matCellDef="let item">
+            {{ item.task }}
+          </td>
+        </ng-container>
+        <ng-container matColumnDef="done">
+          <th mat-header-cell *matHeaderCellDef>Done</th>
+          <td mat-cell *matCellDef="let item" class="small-field">
+            {{ item.completedAt ? (item.completedAt | date : 'HH:mm') : '' }}
+          </td>
+        </ng-container>
+        <ng-container matColumnDef="initials">
+          <th mat-header-cell *matHeaderCellDef>Initials</th>
+          <td mat-cell *matCellDef="let item" class="small-field">
+            {{ item.initials }}
+          </td>
+        </ng-container>
+        <ng-container matColumnDef="actions">
+          <th mat-header-cell *matHeaderCellDef style="width: 110px">Actions</th>
+          <td mat-cell *matCellDef="let item">
+            <button
+              mat-raised-button
+              class="secondary-btn"
+              *ngIf="item.completedAt === null"
+              (click)="openEditDialog(item)"
+            >
+              Complete
+              <ng-container *ngIf="isPassed(item.time)">
+                <span class="alert-container">
+                  <img
+                    src="../../../assets/icons/alerts/critical-alert-icon.svg"
+                    alt="alert icon"
+                  />
+                </span>
+              </ng-container>
+            </button>
+            <button
+              mat-raised-button
+              class="basic-btn"
+              *ngIf="item.completedAt !== null"
+              (click)="openEditDialog(item)"
+            >
+              Edit
+            </button>
+          </td>
+        </ng-container>
 
-  <table mat-table [dataSource]="morningTasks" *ngIf="isLoading">
-    <ng-container matColumnDef="time">
-      <th mat-header-cell *matHeaderCellDef>Time</th>
-      <td mat-cell *matCellDef="let item" class="small-field">
-        {{ item.time }}
-      </td>
-    </ng-container>
-    <ng-container matColumnDef="task">
-      <th mat-header-cell *matHeaderCellDef>Task</th>
-      <td class="comments-field" mat-cell *matCellDef="let item">
-        {{ item.task }}
-      </td>
-    </ng-container>
-    <ng-container matColumnDef="done">
-      <th mat-header-cell *matHeaderCellDef>Done</th>
-      <td mat-cell *matCellDef="let item" class="small-field">
-        {{ item.completedAt ? (item.completedAt | date : 'HH:mm') : '' }}
-      </td>
-    </ng-container>
-    <ng-container matColumnDef="initials">
-      <th mat-header-cell *matHeaderCellDef>Initials</th>
-      <td mat-cell *matCellDef="let item" class="small-field">
-        {{ item.initials }}
-      </td>
-    </ng-container>
-    <ng-container matColumnDef="actions">
-      <th mat-header-cell *matHeaderCellDef style="width: 110px">Actions</th>
-      <td mat-cell *matCellDef="let item">
-        <button
-          mat-raised-button
-          class="secondary-btn"
-          *ngIf="item.completedAt === null"
-          (click)="openEditDialog(item)"
-        >
-          Complete
-          <ng-container *ngIf="isPassed(item.time)">
-            <span class="alert-container">
-              <img src="../../../assets/icons/alerts/critical-alert-icon.svg" alt="alert icon" />
-            </span>
-          </ng-container>
-        </button>
-        <button
-          mat-raised-button
-          class="basic-btn"
-          *ngIf="item.completedAt !== null"
-          (click)="openEditDialog(item)"
-        >
-          Edit
-        </button>
-      </td>
-    </ng-container>
+        <tr mat-header-row *matHeaderRowDef="headerRow"></tr>
+        <tr mat-row *matRowDef="let row; columns: headerRow"></tr>
+      </table>
 
-    <tr mat-header-row *matHeaderRowDef="headerRow"></tr>
-    <tr mat-row *matRowDef="let row; columns: headerRow"></tr>
-  </table>
+      <div class="table-spinner-full-size" *ngIf="!isLoading">
+        <mat-icon><mat-spinner diameter="21"></mat-spinner></mat-icon>
+      </div>
+    </mat-tab>
+    <mat-tab label="Evening">
+      <table mat-table [dataSource]="eveningTasks" *ngIf="isLoading">
+        <ng-container matColumnDef="time">
+          <th mat-header-cell *matHeaderCellDef>Time</th>
+          <td mat-cell *matCellDef="let item" class="small-field">
+            {{ item.time }}
+          </td>
+        </ng-container>
+        <ng-container matColumnDef="task">
+          <th mat-header-cell *matHeaderCellDef>Task</th>
+          <td class="comments-field" mat-cell *matCellDef="let item">
+            {{ item.task }}
+          </td>
+        </ng-container>
+        <ng-container matColumnDef="done">
+          <th mat-header-cell *matHeaderCellDef>Done</th>
+          <td mat-cell *matCellDef="let item" class="small-field">
+            {{ item.completedAt ? (item.completedAt | date : 'HH:mm') : '' }}
+          </td>
+        </ng-container>
+        <ng-container matColumnDef="initials">
+          <th mat-header-cell *matHeaderCellDef>Initials</th>
+          <td mat-cell *matCellDef="let item" class="small-field">
+            {{ item.initials }}
+          </td>
+        </ng-container>
+        <ng-container matColumnDef="actions">
+          <th mat-header-cell *matHeaderCellDef style="width: 110px">Actions</th>
+          <td mat-cell *matCellDef="let item">
+            <button
+              mat-raised-button
+              class="secondary-btn"
+              *ngIf="item.completedAt === null"
+              (click)="openEditDialog(item)"
+            >
+              Complete
+              <ng-container *ngIf="isPassed(item.time)">
+                <span class="alert-container">
+                  <img
+                    src="../../../assets/icons/alerts/critical-alert-icon.svg"
+                    alt="alert icon"
+                  />
+                </span>
+              </ng-container>
+            </button>
+            <button
+              mat-raised-button
+              class="basic-btn"
+              *ngIf="item.completedAt !== null"
+              (click)="openEditDialog(item)"
+            >
+              Edit
+            </button>
+          </td>
+        </ng-container>
 
-  <div class="table-spinner-full-size" *ngIf="!isLoading">
-    <mat-icon><mat-spinner diameter="21"></mat-spinner></mat-icon>
-  </div>
+        <tr mat-header-row *matHeaderRowDef="headerRow"></tr>
+        <tr mat-row *matRowDef="let row; columns: headerRow"></tr>
+      </table>
 
-  <br />
-
-  <!-- Evening Section -->
-  <div class="table-actions">
-    <h1>Evening</h1>
-
-    <button mat-raised-button class="basic-btn" (click)="openTableInfo()">Table Info</button>
-  </div>
-  <hr />
-
-  <table mat-table [dataSource]="eveningTasks" *ngIf="isLoading">
-    <ng-container matColumnDef="time">
-      <th mat-header-cell *matHeaderCellDef>Time</th>
-      <td mat-cell *matCellDef="let item" class="small-field">
-        {{ item.time }}
-      </td>
-    </ng-container>
-    <ng-container matColumnDef="task">
-      <th mat-header-cell *matHeaderCellDef>Task</th>
-      <td class="comments-field" mat-cell *matCellDef="let item">
-        {{ item.task }}
-      </td>
-    </ng-container>
-    <ng-container matColumnDef="done">
-      <th mat-header-cell *matHeaderCellDef>Done</th>
-      <td mat-cell *matCellDef="let item" class="small-field">
-        {{ item.completedAt ? (item.completedAt | date : 'HH:mm') : '' }}
-      </td>
-    </ng-container>
-    <ng-container matColumnDef="initials">
-      <th mat-header-cell *matHeaderCellDef>Initials</th>
-      <td mat-cell *matCellDef="let item" class="small-field">
-        {{ item.initials }}
-      </td>
-    </ng-container>
-    <ng-container matColumnDef="actions">
-      <th mat-header-cell *matHeaderCellDef style="width: 110px">Actions</th>
-      <td mat-cell *matCellDef="let item">
-        <button
-          mat-raised-button
-          class="secondary-btn"
-          *ngIf="item.completedAt === null"
-          (click)="openEditDialog(item)"
-        >
-          Complete
-          <ng-container *ngIf="isPassed(item.time)">
-            <span class="alert-container">
-              <img src="../../../assets/icons/alerts/critical-alert-icon.svg" alt="alert icon" />
-            </span>
-          </ng-container>
-        </button>
-        <button
-          mat-raised-button
-          class="basic-btn"
-          *ngIf="item.completedAt !== null"
-          (click)="openEditDialog(item)"
-        >
-          Edit
-        </button>
-      </td>
-    </ng-container>
-
-    <tr mat-header-row *matHeaderRowDef="headerRow"></tr>
-    <tr mat-row *matRowDef="let row; columns: headerRow"></tr>
-  </table>
-
-  <div class="table-spinner-full-size" *ngIf="!isLoading">
-    <mat-icon><mat-spinner diameter="21"></mat-spinner></mat-icon>
-  </div>
+      <div class="table-spinner-full-size" *ngIf="!isLoading">
+        <mat-icon><mat-spinner diameter="21"></mat-spinner></mat-icon>
+      </div>
+    </mat-tab>
+  </mat-tab-group>
 </main>
