feat: 🎸 update announcements showFrom showTo

--- a/apps/frontend/src/app/pages/announcements/create-announcement-dialog/create-announcement-dialog.component.html
+++ b/apps/frontend/src/app/pages/announcements/create-announcement-dialog/create-announcement-dialog.component.html
@@ -37,7 +37,7 @@
         onclick="this.showPicker()"
         formControlName="showFrom"
         matInput
-        type="datetime-local"
+        type="date"
       />
     </mat-form-field>
 
@@ -47,7 +47,7 @@
         onclick="this.showPicker()"
         matInput
         [min]="today"
-        type="datetime-local"
+        type="date"
         formControlName="showTo"
       />
     </mat-form-field>
