--- a/apps/frontend/src/app/pages/announcements/update-announcement-dialog/update-announcement-dialog.component.html
+++ b/apps/frontend/src/app/pages/announcements/update-announcement-dialog/update-announcement-dialog.component.html
@@ -38,7 +38,7 @@
         formControlName="showFrom"
         matInput
         [min]="today"
-        type="datetime-local"
+        type="date"
       />
     </mat-form-field>
 
@@ -48,7 +48,7 @@
         onclick="this.showPicker()"
         [min]="today"
         matInput
-        type="datetime-local"
+        type="date"
         formControlName="showTo"
       />
     </mat-form-field>
